# Aegis

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  extensions.json  keybindings.json  pyproject.toml  settings.json  skills.md
.cursor/rules/: aegis.mdc
.github/: copilot-instructions.md
.github/workflows/: ci.yml
docs/: naming_conventions.md
docs/adr/: .gitkeep  ADR-0001-deterministic-layer-boundary-architecture.md  ADR-0002-immutable-dataclass-contracts.md  ADR-0003-sha256-plan-checksums-and-audit-ids.md  ADR-0004-gate-v1-pure-approval-boundary.md  ADR-0005-intent-layer-stubbed-phase1.md  ADR-0006-no-side-effects-in-core-pipeline.md  ADR-0007-config-injection-over-env-reads.md  ADR-0008-structured-logging-boundary-policy.md  ADR-0009-world-snapshot-evidence-trust-attestation-boundary.md  ADR-0010-attestation-verifier-adapter-trust-policy-configuration-hardening.md  ADR-0012-decision-trace-approval-receipt-integrity.md  ADR-0013-deterministic-scenario-runner-evil-twin-coverage-gate.md  ADR-0014-authority-drift-policy-versioning-contract-coverage-gate.md  ADR-0015-execution-adapter-boundary-ros2-message-mapping.md  ADR-0016-deterministic-adapter-replay-and-mapping-proof-harness.md  ADR-0017-runtime-adapter-dry-run-contract-dispatch-firewall.md  (+11 more)
scripts/: smoke_demo.py  verify.py
tests/: backend_authority_fixtures.py  backend_replay_fixtures.py  capability_lease_fixtures.py  command_quarantine_fixtures.py  conftest.py  execution_adapter_fixtures.py  operator_authority_fixtures.py  policy_freshness_fixtures.py  policy_trust_fixtures.py
(+403 files in other folders)
